@@ -3,6 +3,11 @@
 # Distributed under the GPL v2
 # $Id$
 
+  25 Jun 2011; Sebastian Pipping <sping@gentoo.org>
+  targets/stage1/stage1-chroot.sh, targets/stage2/stage2-chroot.sh,
+  targets/support/chroot-functions.sh:
+  Add "-news" to FEATURES everywhere
+
   25 Jun 2011; Raúl Porcel <armin76@gentoo.org> modules/catalyst/arch/sh.py:
   Add sh4aeb
 
